use app counter in in app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -339,6 +339,7 @@
   </div>
 
   <app-button [text]="'text'"></app-button>
+  <app-counter [initialCount]="'10'"></app-counter>
 
   <!-- Resources -->
   <h2>Resources</h2>
