--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<a routerLink="/" routerLinkActive="active">Dashboard</a>
-<a routerLink="/login" routerLinkActive="active">Login</a>
-<router-outlet></router-outlet>
+<div class="grid grid-cols-12">
+  <app-side-bar class="col-span-3"></app-side-bar>
+  <router-outlet style="display:none;"></router-outlet>
+</div>
+
