first version of the projects page

--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,8 +1,8 @@
 <aside class="bg-primary flex flex-col justify-between min-h-screen items-center content-center">
-  <div class="flex flex-col">
-    <img src="../../assets/riskchallenger-logo.png">
+  <div class="flex flex-col w-full">
+    <img src="../../assets/logo.svg" class="mx-auto my-4">
     <span class="text-gray-500 mb-6 px-5">Your projects</span>
-    <a routerLink="/" routerLinkActive="active"
+    <a routerLink="/projects" routerLinkActive="active"
        class="px-10 text-gray-500 text-sm p-4 mb-2 uppercase font-bold bg-primary-900">
       <i class="fas fa-copy text-xl text-gray-200 mr-3 w-6 h-6"></i>
       Projects
