--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div class="grid grid-cols-12">
-  <app-side-bar class="col-span-3"></app-side-bar>
-  <router-outlet style="display:none;"></router-outlet>
+  <app-side-bar class="col-span-2"></app-side-bar>
+  <main class="col-span-10">
+    <app-top-bar></app-top-bar>
+    <router-outlet style="display:none;"></router-outlet>
+  </main>
 </div>
 
