projects seems to be working

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -2,7 +2,7 @@
   <div class="w-full flex justify-between p-5 pr-8">
     <h1 class="text-4xl text-gray-600">Projects</h1>
     <form class="relative">
-      <input type="search" class="p-4 py-3 pl-8 z-0 rounded" placeholder="search">
+      <input type="search" class="p-4 py-3 pl-8 z-0 rounded" placeholder="search" name="search" [(ngModel)]="search" (keyup)="onSearch($event)">
       <i class="fa fa-search text-gray-500 absolute top-0 left-0 mt-4 ml-2 z-10 text-xl"></i>
     </form>
   </div>
@@ -12,7 +12,7 @@
         <th class="text-sm uppercase text-gray-500 text-left w-4/12">
           Project name
         </th>
-        <th class="text-sm uppercase text-gray-500 text-right w-2/12">
+        <th class="text-sm uppercase text-gray-500 text-left w-1/12">
           Version
         </th>
       <th class="text-sm uppercase text-gray-500 text-left w-3/12">
@@ -25,6 +25,15 @@
         last change
       </th>
       </thead>
+      <tbody>
+        <tr *ngFor="let project of filteredProjects" class="text-gray-500">
+          <td class="text-sm text-gray-500 text-left w-4/12">{{project.name}}</td>
+          <td class="text-sm text-gray-500 text-left w-1/12">{{project.version}}</td>
+          <td class="text-sm text-gray-500 text-left w-3/12">{{project.riskmanager}}</td>
+          <td class="text-sm text-gray-500 text-left w-2/12">{{project.date_created}}</td>
+          <td class="text-sm text-gray-500 text-right w-2/12">{{project.last_change}}</td>
+        </tr>
+      </tbody>
     </table>
   </div>
 </main>
