tablet app page is done

--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -11,7 +11,7 @@
       <i class="fas fa-inbox text-xl text-gray-200 mr-3 w-6 h-6"></i>
       Archive
     </a>
-    <a routerLink="/" routerLinkActive="active" class="px-10 text-gray-500 text-sm p-4 mb-2 uppercase font-bold">
+    <a routerLink="/tablet-app" routerLinkActive="active" class="px-10 text-gray-500 text-sm p-4 mb-2 uppercase font-bold">
       <i class="fas fa-download text-xl text-gray-200 mr-3 w-6 h-6"></i>
       Tablet app
     </a>
