--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,57 +1,57 @@
 <aside class="bg-primary flex flex-col justify-between min-h-screen items-center content-center">
   <div class="flex flex-col w-full">
-    <img src="../../assets/logo.svg" class="mx-auto my-4">
-    <span class="text-gray-500 mb-6 px-5">Your projects</span>
+    <img src="../../assets/logo.svg" class="mx-auto my-4 px-2">
+    <span class="text-gray-500 mb-6 lg:px-5 text-xs sm:text-sm lg:text-base text-center md:text-left">Your projects</span>
     <a routerLink="/projects" routerLinkActive="active"
-       class="px-10 text-gray-500 text-sm p-4 mb-2 uppercase font-bold bg-primary-900">
+       class="px-6 md:px-10 text-gray-500 text-sm p-4 mb-2 uppercase font-bold bg-primary-900">
       <i class="fas fa-copy text-xl text-gray-200 mr-3 w-6 h-6"></i>
-      Projects
+      <span class="hidden lg:inline">Projects</span>
     </a>
-    <a routerLink="/" routerLinkActive="active" class="px-10 text-gray-500 text-sm p-4 mb-2 uppercase font-bold">
+    <a routerLink="/" routerLinkActive="active" class="px-6 md:px-10 text-gray-500 text-sm p-4 mb-2 uppercase font-bold">
       <i class="fas fa-inbox text-xl text-gray-200 mr-3 w-6 h-6"></i>
-      Archive
+      <span class="hidden lg:inline">Archive</span>
     </a>
-    <a routerLink="/tablet-app" routerLinkActive="active" class="px-10 text-gray-500 text-sm p-4 mb-2 uppercase font-bold ">
+    <a routerLink="/tablet-app" routerLinkActive="active" class="px-6 md:px-10 text-gray-500 text-sm p-4 mb-2 uppercase font-bold ">
       <i class="fas fa-download text-xl text-gray-200 mr-3 w-6 h-6"></i>
-      Tablet app
+      <span class="hidden lg:inline">Tablet app</span>
     </a>
   </div>
-  <div class="lg:w-full">
-    <div class="self-start w-full flex flex-col relative">
-      <ol class="px-2 py-2 my-3 flex justify-evenly">
-        <li class="mr-2">
-          <button class="border-gray-500 border rounded-lg px-2 py-1 focus:bg-white focus:text-gray-300 focus:outline-none">
-            <i class="fa fa-search text-gray-500 text-sm"></i>
+  <div class="w-full">
+    <div class="self-start w-full flex relative">
+      <ol class="px-2 py-2 my-3 flex flex-col lg:flex-row justify-evenly items-center w-full">
+        <li class="lg:mr-2 mb-2">
+          <button class="border-gray-500 border rounded-lg px-2 py-1 focus:bg-white focus:text-gray-300 focus:outline-none flex justify-center items-center pt-4 content-center">
+            <i class="fa fa-search text-gray-500 text-sm w-6 h-6"></i>
           </button>
         </li>
-        <li class="mr-2">
-          <button class="border-gray-500 border rounded-lg px-2 py-1 focus:bg-white focus:text-gray-300 focus:outline-none">
-            <i class="fa fa-folder text-gray-500 text-sm"></i>
+        <li class="lg:mr-2 mb-2">
+          <button class="border-gray-500 border rounded-lg px-2 py-1 focus:bg-white focus:text-gray-300 focus:outline-none flex justify-center items-center pt-4 content-center">
+            <i class="fa fa-folder text-gray-500 text-sm w-6 h-6"></i>
           </button>
         </li>
-        <li class="mr-2">
-          <button class="border-gray-500 border rounded-lg px-2 py-1 focus:bg-white focus:text-gray-300 focus:outline-none">
-            <i class="fa fa-users text-gray-500 text-sm"></i>
+        <li class="lg:mr-2 mb-2">
+          <button class="border-gray-500 border rounded-lg px-2 py-1 focus:bg-white focus:text-gray-300 focus:outline-none flex justify-center items-center pt-4 content-center">
+            <i class="fa fa-users text-gray-500 text-sm w-6 h-6"></i>
           </button>
         </li>
-        <li class="mr-2">
-          <button class="border-gray-500 border rounded-lg px-2 py-1 focus:bg-white focus:text-gray-300 focus:outline-none">
-            <i class="fa fa-comment-alt text-gray-500 text-sm"></i>
+        <li class="lg:mr-2 mb-2">
+          <button class="border-gray-500 border rounded-lg px-2 py-1 focus:bg-white focus:text-gray-300 focus:outline-none flex justify-center items-center pt-4 content-center">
+            <i class="fa fa-comment-alt text-gray-500 text-sm w-6 h-6"></i>
           </button>
         </li>
-        <li class="mr-2">
-          <button class="border-gray-500 border rounded-lg px-2 py-1 focus:bg-white focus:text-gray-300 focus:outline-none">
-            <i class="fa fa-address-card text-gray-500 text-sm"></i>
+        <li class="lg:mr-2 mb-2">
+          <button class="border-gray-500 border rounded-lg px-2 py-1 focus:bg-white focus:text-gray-300 focus:outline-none flex justify-center items-center pt-4 content-center">
+            <i class="fa fa-address-card text-gray-500 text-sm w-6 h-6"></i>
           </button>
         </li>
       </ol>
     </div>
     <button class="bg-primary-900 flex flex-col relative py-3 max-w-full lg:w-full">
-      <h1 class="text-gray-100 font-bold px-5 text-sm w-full">Diederik Bol</h1>
+      <h1 class="text-gray-100 font-bold px-5 text-sm w-full hidden md:block">Diederik Bol</h1>
       <div class="text-sm text-gray-300 px-5">
         Log out
       </div>
-      <div class="text-gray-300 mr-3 mb-4 absolute bottom-0 right-0"><i class="fa fa-caret-down"></i></div>
+      <div class="text-gray-300 mr-3 mb-4 absolute bottom-0 right-0 hidden md:block"><i class="fa fa-caret-down"></i></div>
     </button>
   </div>
 </aside>
