add a green color

--- a/src/app/dashboard-card/dashboard-card.component.html
+++ b/src/app/dashboard-card/dashboard-card.component.html
@@ -4,7 +4,7 @@
       {{title}}
     </h1>
     <h2 class="text-3xl">
-      {{subtitle}} <i class="fa fa-caret-down ml-3 text-green-300"></i>
+      {{subtitle}} <i class="fa fa-caret-down ml-3 text-primary-green"></i>
     </h2>
   </div>
 </div>
