mvp dashboard working

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,5 +6,5 @@
   <app-dashboard-card class="md:col-span-3 lg:col-span-2 col-span-12 " [title]="'value'"
                       [subtitle]="25"></app-dashboard-card>
   <app-dashboard-grid class="md:col-span-3 lg:col-span-4 col-span-12 row-start-2"></app-dashboard-grid>
-  <app-dashboard-graph class="md:col-span-3 lg:col-span-4 col-span-12 row-start-2"></app-dashboard-graph>
+  <app-dashboard-graph class="md:col-span-4 lg:col-span-6 col-span-12 row-start-2 row-span-4"></app-dashboard-graph>
 </main>
