--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -2,16 +2,18 @@
   <div class="flex flex-col w-full">
     <img src="../../assets/logo.svg" class="mx-auto my-4 px-2">
     <span class="text-gray-500 mb-6 lg:px-5 text-xs sm:text-sm lg:text-base text-center md:text-left">Your projects</span>
-    <a routerLink="/projects" routerLinkActive="active"
-       class="px-6 md:px-10 text-gray-500 text-sm p-4 mb-2 uppercase font-bold bg-primary-900">
+    <a routerLink="/projects" routerLinkActive="bg-primary-900"
+       class="px-6 md:px-10 text-gray-500 text-sm p-4 mb-2 uppercase font-bold ">
       <i class="fas fa-copy text-xl text-gray-200 mr-3 w-6 h-6"></i>
       <span class="hidden lg:inline">Projects</span>
     </a>
-    <a routerLink="/" routerLinkActive="active" class="px-6 md:px-10 text-gray-500 text-sm p-4 mb-2 uppercase font-bold">
-      <i class="fas fa-inbox text-xl text-gray-200 mr-3 w-6 h-6"></i>
-      <span class="hidden lg:inline">Archive</span>
+    <a routerLink="/dashboard" routerLinkActive="bg-primary-900"
+       class="px-6 md:px-10 text-gray-500 text-sm p-4 mb-2 uppercase font-bold">
+      <i class="fas fa-copy text-xl text-gray-200 mr-3 w-6 h-6"></i>
+      <span class="hidden lg:inline">Dashboard</span>
     </a>
-    <a routerLink="/tablet-app" routerLinkActive="active" class="px-6 md:px-10 text-gray-500 text-sm p-4 mb-2 uppercase font-bold ">
+    <a routerLink="/tablet-app" routerLinkActive="bg-primary-900"
+       class="px-6 md:px-10 text-gray-500 text-sm p-4 mb-2 uppercase font-bold ">
       <i class="fas fa-download text-xl text-gray-200 mr-3 w-6 h-6"></i>
       <span class="hidden lg:inline">Tablet app</span>
     </a>
