--- a/src/app/dashboard-graph/dashboard-graph.component.html
+++ b/src/app/dashboard-graph/dashboard-graph.component.html
@@ -1,8 +1,22 @@
 <div class="bg-primary-100 pb-1 rounded-t-sm rounded-b-md hover:text-white text-gray-500 transition-all duration-150 "
-     [ngClass]="{'absolute top-0 right-0 bottom-0 left-0 m-4': fullscreen}">
+     [ngClass]="{'absolute top-0 right-0 bottom-0 left-0 m-4 mb-0 z-10': fullscreen}">
   <div class="md:px-2 lg:px-6 lg:pb-2 bg-primary-900 text-center text-current rounded-t-sm rounded-b-lg rounded relative"
        [ngStyle]="{'left:-1px; width:102%': !fullscreen}">
-    <div class="graph"></div>
+    <div class="relative">
+      <div class="absolute top-0 left-0 px-1 py-3 flex flex-row">
+        <i class="fa fa-chevron-up text-primary-green mr-1 focus:text-current"></i>
+        <h2 class="mr-2 text-current">
+          78
+        </h2>
+        <h3 class="mr-2">
+          %
+        </h3>
+        <h4 class="text-primary-green tex-sm focus:text-current">14+</h4>
+      </div>
+      <div class="chart-wrapper">
+        <ngx-chartjs [data]="data" type="line" [options]="options"></ngx-chartjs>
+      </div>
+    </div>
     <button class="absolute bottom-0 right-0 mb-4 mr-4 cursor-pointer text-current focus:outline-none" (click)="grow()">
       <i class="fa fa-compress text-current"></i>
     </button>
