--- a/src/app/dashboard-grid/dashboard-grid.component.html
+++ b/src/app/dashboard-grid/dashboard-grid.component.html
@@ -1,6 +1,6 @@
 <div class="bg-primary-100 pb-1 rounded-t-sm rounded-b-md hover:text-white text-gray-500 transition-all duration-150 "
-     [ngClass]="{'absolute top-0 right-0 bottom-0 left-0 m-4': fullscreen}">
-  <div class="md:px-2 lg:px-6 lg:pb-2 bg-primary-900 text-center text-current rounded-t-sm rounded-b-lg rounded relative"
+     [ngClass]="{'absolute top-0 right-0 bottom-0 left-0 m-4 z-10': fullscreen}">
+  <div class="md:px-2 lg:px-6 lg:pb-2 bg-primary-900 text-center text-current rounded-t-sm rounded-b-lg rounded relative h-full"
        [ngStyle]="{'left:-1px; width:102%': !fullscreen}">
     <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="347" viewBox="0 0 351 347">
       <g transform="translate(11.678 14.181)" style="isolation:isolate">
